--- a/Esposito/02-coverage-plot/02_coverage_plot.ipynb
+++ b/Esposito/02-coverage-plot/02_coverage_plot.ipynb
@@ -576,7 +576,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f40408abf0>]"
+       "[<matplotlib.lines.Line2D at 0x28365fc6cb0>]"
       ]
      },
      "execution_count": 13,
@@ -620,7 +620,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f4042bfc10>]"
+       "[<matplotlib.lines.Line2D at 0x283680c3850>]"
       ]
      },
      "execution_count": 14,
@@ -714,7 +714,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f404126590>]"
+       "[<matplotlib.lines.Line2D at 0x2836816e6b0>]"
       ]
      },
      "execution_count": 16,
