--- a/Meo/ex_1_classification_iris.ipynb
+++ b/Meo/ex_1_classification_iris.ipynb
@@ -27,7 +27,8 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn.model_selection import cross_val_score \n",
-    "import graphviz "
+    "import graphviz \n",
+    "from unbalanced_dataset import UnderSampler, OverSampler, SMOTE"
    ]
   },
   {
